# TelecomAIAssistent

./: README.md  app.py  pyproject.toml  requirements.txt  test_db.py
agents/: billing_agents.py  knowledge_agents.py  network_agents.py  service_agents.py
config/: config.py
orchestration/: graph.py  state.py
ui/: streamlit_app.py
utils/: database.py
